k8s/apps/common/ai/stt-voice/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stt-voice
spec:
  hostnames: ["stt-voice.${MAIN_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: stt-voice
          port: 8900
          namespace: default
